# set

./: Cargo.toml  README.md  Trunk.toml  index.html  input.txt  set_ui.js  set_ui_bg.wasm
.github/workflows/: pages.yml
set/: Cargo.toml
set/src/: display.rs  lexer.rs  lib.rs  parser.rs  transformer.rs
set_ui/: Cargo.toml  index.html
set_ui/src/: app.rs  lib.rs  main.rs
src/: display.rs  lexer.rs  lib.rs  main.rs  parser.rs  transformer.rs
